# fulltext-search-tools

./: CLAUDE.md  Cargo.toml  README.md  axiom.yaml
messages/: messages.proto
nodes/: explain.rs  explain_test.rs  ftsutil.rs  parse_query.rs  parse_query_test.rs  search.rs  search_test.rs  snippet.rs  snippet_test.rs  tokenize.rs  tokenize_test.rs
