# Axiom package: christiangeorgelucas/fulltext-search-tools
[package]
name = "service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "service"
path = "service.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
serde_json = "1"
tantivy = { version = "=0.26.1" }

[build-dependencies]
tonic-build = "0.12"
